<resources>
    <string name="app_name">Meet The Team</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="textName">What\'s your name ?</string>
    <string name="textPosition">What\'s your position title ?</string>
    <string name="position">Position Title</string>
    <string name="textEmailPassword">Email &amp; Password</string>
    <string name="textVerification">Email has been sent for verification !</string>
    <string name="textResend">Resend</string>
    <string name="textVerified">Verified !</string>
    <string name="textLetGetStarted">Let\'s get started</string>
    <string name="textImageContent">Verified icon</string>
    <string name="teamMate">Team Mates</string>
    <string name="profile">Profile</string>
    <string name="myProfile">My Profile</string>
    <string name="chat">Chat</string>
    <string name="content_description_media">Member Profile</string>
    <string name="textWorkTitle">I am working as a</string>
    <string name="textIntro">I am....</string>
    <string name="textInterest">I love....</string>
    <string name="textDate">I appreciate when my date....</string>
    <string name="empty">Please fill this field....</string>
    <string name="textEdit">Edit Profile</string>
    <string name="textLogout">Log out</string>
    <string name="textIm">I am</string>
    <string name="storagePath">"gs://meet-the-team-ac5ac.appspot.com/"</string>
    <string name="defaultImage">"gs://meet-the-team-ac5ac.appspot.com/nophoto.jpg"</string>
    <string name="textMessage">Write your message</string>
    <string name="textMemberMessage">Tap to Chat</string>
</resources>