<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <Button
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:id="@+id/back"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/baseline_keyboard_backspace_24"
        android:backgroundTint="@color/colorBlack"
        >
    </Button>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:textSize="25sp"
        android:text="@string/textEmailPassword"
        android:textColor="@color/colorGrey"
        android:inputType="text"
        tools:ignore="TextViewEdits">
    </TextView>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:hint="@string/email"
        android:backgroundTint="@color/colorBlack"
        android:textSize="40sp"
        android:autofillHints=""
        android:inputType="textEmailAddress">
    </EditText>
    <EditText
        android:id="@+id/password"
        android:layout_below="@+id/email"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"
        android:hint="@string/password"
        android:backgroundTint="@color/colorBlack"
        android:textSize="40sp"
        android:autofillHints=""
        android:inputType="textPassword">
    </EditText>
    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:background="@drawable/next"
        android:id="@+id/next"
        >
    </Button>

</RelativeLayout>