<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@id/email"
       android:src="@drawable/person"
       android:layout_marginLeft="100dp"
       android:layout_marginBottom="100dp"
       android:layout_marginTop="100dp"
       android:layout_marginRight="100dp"
       >
   </ImageView>
   <Button
       android:id="@+id/register"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="40dp"
       android:layout_marginRight="40dp"
       android:layout_alignParentBottom="true"
       android:layout_marginBottom="100dp"
       android:text="Register"
       android:background="@drawable/round_corner"
       android:textColor="@color/colorWhite"
       android:textStyle="bold"
       >
   </Button>
   <Button
       android:id="@+id/login"
       android:layout_above="@+id/register"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginLeft="40dp"
       android:layout_marginRight="40dp"
       android:layout_marginBottom="20dp"
       android:text="@string/login"
       android:background="@drawable/round_corner"
       android:textColor="@color/colorWhite"
       android:textAllCaps="false"
       android:textStyle="bold"
       >
   </Button>
   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/email"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_above="@+id/password"
       android:layout_marginBottom="20dp"
       android:layout_marginLeft="40dp"
       android:layout_marginRight="40dp"
       android:backgroundTint="@color/colorBlack"
       >

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textStyle="bold"
          android:inputType="textEmailAddress"
          android:hint="@string/email"
          />
   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/password"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_above="@+id/login"
       android:layout_marginBottom="20dp"
       android:layout_marginLeft="40dp"
       android:layout_marginRight="40dp"
       app:passwordToggleEnabled="true"
       android:backgroundTint="@color/colorBlack"
       >

      <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textStyle="bold"
          android:inputType="textPassword"
          android:hint="@string/password"
          />
   </com.google.android.material.textfield.TextInputLayout>


</RelativeLayout>