<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layout_member_row"
    android:fillViewport="false"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite"
        app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_keyboard_backspace_24"
                android:id="@+id/back">
            </Button>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/title"
                android:textSize="25sp"
                android:textColor="@color/colorGrey"
                android:text="@string/textEdit"
                android:gravity="center"
                >
            </TextView>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="8dp"
                android:text="Update"
                android:background="@color/colorWhite"
                android:textColor="@color/colorGrey"
                android:id="@+id/update"
                >
            </Button>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editProfile"
        android:layout_below="@id/toolbar"
        android:layout_centerInParent="true"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="60dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/sikander"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/Edit_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:elevation="12dp"
            android:layout_gravity="end|bottom"
            app:srcCompat="@drawable/pencil" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editProfile"
        >
            <androidx.cardview.widget.CardView
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="16dp"
                    >
                    <!-- Title, secondary and supporting text -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textName"
                        android:layout_marginTop="15dp"
                        android:textStyle="bold"
                        />
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/memberName"
                        android:layout_marginTop="8dp"
                        android:hint="@string/empty"
                        android:background="@null"
                        android:textSize="12sp"
                        android:inputType="textPersonName"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textWorkTitle"
                        android:layout_marginTop="15dp"
                        android:textStyle="bold"
                        >
                    </TextView>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/memberPosition"
                        android:layout_marginTop="8dp"
                        android:hint="@string/empty"
                        android:background="@null"
                        android:textSize="12sp"
                        android:inputType="text"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textIntro"
                        android:layout_marginTop="15dp"
                        android:textStyle="bold"
                        >
                    </TextView>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/memberIntro"
                        android:layout_marginTop="8dp"
                        android:textSize="12sp"
                        android:hint="@string/empty"
                        android:background="@null"
                        android:inputType="text"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textInterest"
                        android:layout_marginTop="15dp"
                        android:textStyle="bold"
                        >
                    </TextView>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/memberInterest"
                        android:layout_marginTop="8dp"
                        android:textSize="12sp"
                        android:hint="@string/empty"
                        android:background="@null"
                        android:inputType="text"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textDate"
                        android:layout_marginTop="15dp"
                        android:textStyle="bold"
                        >
                    </TextView>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/memberDatePref"
                        android:layout_marginTop="8dp"
                        android:textSize="12sp"
                        android:hint="@string/empty"
                        android:background="@null"
                        android:inputType="text"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="?android:attr/textColorSecondary"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
    </ScrollView>
</RelativeLayout>
